@@ -23,10 +23,9 @@
 
 /*
  * @test
- * @bug 8262891 8268663
+ * @bug 8262891 8268663 8289894
  * @summary Check guards implementation.
- * @compile --enable-preview -source ${jdk.version} Guards.java
- * @run main/othervm --enable-preview Guards
+ * @enablePreview
  */
 
 import java.util.Objects;
@@ -49,7 +48,6 @@ public class Guards {
         runIfTrue(this::typeGuardAfterParenthesizedTrueSwitchStatement);
         runIfTrue(this::typeGuardAfterParenthesizedTrueSwitchExpression);
         runIfTrue(this::typeGuardAfterParenthesizedTrueIfStatement);
-        testGuardNPE();
     }
 
     void run(Function<Object, String> convert) {
@@ -57,6 +55,7 @@ public class Guards {
         assertEquals("one", convert.apply(1));
         assertEquals("other", convert.apply(-1));
         assertEquals("box with empty", convert.apply(new Box("")));
+        assertEquals("box with non-empty", convert.apply(new Box("a")));
         assertEquals("any", convert.apply(""));
     }
 
@@ -72,6 +71,7 @@ public class Guards {
             case Integer i when i == 1: return "one";
             case Integer i: return "other";
             case Box(String s) when s.isEmpty(): return "box with empty";
+            case Box(String s) : return "box with non-empty";
             case Object x: return "any";
         }
     }
@@ -82,6 +82,7 @@ public class Guards {
             case Integer i when i == 1 -> { yield "one"; }
             case Integer i -> "other";
             case Box(String s) when s.isEmpty() -> "box with empty";
+            case Box(String s) -> "box with non-empty";
             case Object x -> "any";
         };
     }
@@ -93,6 +94,7 @@ public class Guards {
             case Integer i when i == 1 -> { x = "one"; yield true; }
             case Integer i -> { x = "other"; yield true; }
             case Box(String s) when s.isEmpty() -> {x = "box with empty"; yield true; }
+            case Box(String s) -> {x = "box with non-empty"; yield true; }
             case Object other -> (x = "any") != null;
         }) {
             return x;
@@ -161,26 +163,6 @@ public class Guards {
             return s;
         }
         return null;
-    }
-
-    void testGuardNPE() {
-        assertEquals("empty", guardNPE(""));
-        assertEquals("A", guardNPE("A"));
-        assertEquals("other", guardNPE(1));
-        try {
-            guardNPE(null);
-            throw new AssertionError("Expected exception missing.");
-        } catch (NullPointerException ex) {
-            //expected
-        }
-    }
-
-    String guardNPE(Object o) {
-        return switch (o) {
-            case null, String s when s.isEmpty() -> "empty";
-            case String s -> s;
-            case Object x -> "other";
-        };
     }
 
     record Box(Object o) {}
